# tauri-svelte-template

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc  CHANGELOG.md  CONTRIBUTING.md  Justfile  LICENSE  README.md  biome.json  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  tailwind.config.cjs  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  release-please.yml
.storybook/: main.ts
docs/: TAURI_V2_MIGRATION.md
e2e/: smoke.spec.ts
scripts/: setup-monorepo.sh
src/: App.svelte  env.ts  main.ts  telemetry.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/lib/: Button.stories.ts  Button.svelte  Counter.svelte  Counter.test.ts
